# codec-vcu-xma-plg

./: CMakeLists.txt  Makefile  README.md
dec/: vcu-xma-dec-plg.cpp
enc/: vcu-xma-enc-plg.cpp
include/: mpsoc_vcu_hdr.h  xlnx_enc_dyn_params.h
